--- a/Clase 03/masobjetos.html
+++ b/Clase 03/masobjetos.html
@@ -1,11 +1,12 @@
 <h1>De Object a Objetos - La venganza de AJAX</h1>
+<script src="producto.class.js"></script>
 <script>
 	const ajax = new XMLHttpRequest()
 	ajax.open("GET", "productos.json")
 	ajax.onload = function(){
 		if( this.status == 200 ){ //<-- Respuesta Exitosa!
 
-			let productos = JSON.parse( this.response )
+			let productos = Producto.parse( this.response )
 
 			console.log( productos )
 
