--- a/Clase 04/masobjetos.html
+++ b/Clase 04/masobjetos.html
@@ -2,7 +2,7 @@
 <script src="producto.class.js"></script>
 <script>
 	const ajax = new XMLHttpRequest()
-	ajax.open("GET", "productos.json")
+	ajax.open("GET", "https://api.myjson.com/bins/dcg2p")
 	ajax.onload = function(){
 		if( this.status == 200 ){ //<-- Respuesta Exitosa!
 
