Mostrando la coleccion de Productos

--- a/Clase 04/masobjetos.html
+++ b/Clase 04/masobjetos.html
@@ -10,6 +10,12 @@
 
 			console.log( productos )
 
+			productos.forEach(function(producto){
+
+				producto.Mostrar()
+				
+			})
+
 		}
 	}
 </script>
