--- a/Clase 09/index.html
+++ b/Clase 09/index.html
@@ -12,6 +12,11 @@
 		//Capa 3: Uso de los datos
 		console.table( peliculas )
 
-	})
+		return peliculas
 
+	}).then(function(datos){
+
+		datos.forEach( dato => { console.log(dato) } )
+
+	})
 </script>
